style.css
html, body {
    margin: 0px;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0;

    font-family: Arial, Helvetica, sans-serif;
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    width: 100px;
    height: 25px;
}

.container {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.header,
.footer {
    height: 72px;
    background: #1F2937;
    color: #F9FAF8;
    display: flex;
    flex-shrink: 0;
    justify-content: space-evenly;
    align-items: center;
}

.header {
    font-size: 24px;
    font-weight: 900;
    padding: 0 16px;
}


ul {
    display: flex;
    list-style-type: none;
    gap: 20px;
    font-size: 18px;
    font-weight: normal;
 
}

a {
    text-decoration: none;
    color: #F9FAF8;
}

.footer {
    flex-direction: column-reverse;
}


.title-container {
    background: #1F2937;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 3em;
}

.text-window {
    display: flex;
    flex-direction: column;
    gap: 0.7em;
    width: 450px;
    
}

.title {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.title-text {
    font-size: 18px;
    color: #E5E7EB;
}

.title-button {
    background-color: #3882F6;
    border: 1px #3882F6;
    color: #E5E7EB;
    
}

.mountain {
    height: auto;
    width: 400px;
}

.second-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin: 50px;
    padding: 20px;
}

.pictures-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.second-title {
    display: flex;
    justify-content: center;
    align-items: center;
}

.pictures {
    height: 100px;
    width: 100px;
    border: 2px solid #3882F6;
    border-radius: 4px;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 100px;
    height: 100px;

}
    
.quote-box {
    display: flex;
    background: #E5E7EB;
    padding: 3em;
}

.quote {
    font-size: 36px;
    font-style: italic;
    color: #1F2937
}

.call-container {
    display: flex;
    flex-direction: column;
    background: #3882F6;
    width: 480px;
    border-radius: 10px;
    margin: 2em;
    padding: 3em;
}

